# redis-android

./: .gitignore  .project  AndroidManifest.xml  CHANGELOGS.md  LICENSE.txt  README.md  build.gradle  import-summary.txt  local.properties  settings.gradle
.github/workflows/: publish-maven-central.yml
ExampleApp/: settings.gradle
ExampleApp/app/: build.gradle
ExampleApp/gradle/wrapper/: gradle-wrapper.properties
ExampleApp/redis-android/: build.gradle
ExampleApp/redis-android/src/main/jni/: Application.mk  redis-android.h
ExampleApp/repository/wf9a5m75/redis/redis-android/: maven-metadata.xml  maven-metadata.xml.md5  (+1 more)
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/libbthread/: .gitignore  configure.ac
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  config.h  redis.c  redis.h
redis-android/: .gitignore  CHANGELOGS.md  build.gradle  gradle.properties  make_zip.sh
redis-android/gradle/wrapper/: gradle-wrapper.properties
redis-android/src/main/: AndroidManifest.xml  release.h
redis-android/src/main/jni/: Android.mk  Application.mk  redis-android.c  redis-android.h  release.h
redis-android/tasks/: generateZips.sh
release/: app-debug.apk
repository/io/wf9a5m75/redis-android/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
repository/wf9a5m75/redis/redis-android/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
res/layout/: activity_redis.xml
(+755 files in other folders)
