AC_PREREQ([2.69])
AC_INIT([libbthread], [0.2], [])
AC_CONFIG_SRCDIR([pt-cancel.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign])

LT_INIT

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
